dist/1.0/bin/sample/retrieveUnpackaged/objects/InstProdAttribute__c.object
<CustomObject>
    <fields>
        <fullName>AttributeInstanceId__c</fullName>
        <description>Installed attribute instance ID from CSR</description>
        <label>AttributeInstanceId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Installed Product Attributes</relationshipLabel>
        <relationshipName>Installed_Product_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InstProdService__c</fullName>
        <label>Installed Product Service</label>
        <referenceTo>InstProdService__c</referenceTo>
        <relationshipLabel>Installed Product Attributes</relationshipLabel>
        <relationshipName>Installed_Product_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Val__c</fullName>
        <label>Value</label>
        <length>7200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Installed Product Attribute</label>
    <nameField>
        <label>Installed Product Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Product Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>